fix stretching

--- a/jira-plugin/src/content.scss
+++ b/jira-plugin/src/content.scss
@@ -20,6 +20,7 @@ body ._JX {
       margin-right: 6px;
       margin-left: -3px;
       align-self: center;
+      min-width: 20px;
       margin-top: -2px;
     }
 
